--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   firebase_messaging: ^7.0.3
+  flutter_inappwebview: ^4.0.0+4
   flutter_local_notifications: ^3.0.1+7
 
 dev_dependencies:
