--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_messaging: ^7.0.3
   flutter_inappwebview: ^4.0.0+4
   flutter_local_notifications: ^3.0.1+7
+  toast: ^0.1.5
 
 dev_dependencies:
   flutter_test:
